# change-data-capture

./: Taskfile.yml  connector_config.json  pyproject.toml
connectors/: cars.json  setup-connectors.sh  setup-sink-conn.sh  setup-src-conn.sh  sink-jdbc.json  src-postgres.json
database/: docker-compose.yml
debezium/: docker-compose.yml
src/change_data_capture/: __init__.py  kafka_consumer.py  kafka_producer.py
src/change_data_capture/connector/: connector.py
